代码优化： 1. fix bug, work nodes join
