# docs/swagger.json
@@ -69,7 +69,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/cluster.clusterParam"
+                            "$ref": "#/definitions/models.Cluster"
                         }
                     }
                 ],
@@ -167,75 +167,6 @@
                 }
             }
         },
-        "cluster.Host": {
-            "type": "object",
-            "properties": {
-                "ip": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "port": {
-                    "type": "integer",
-                    "default": 22
-                },
-                "user": {
-                    "type": "string",
-                    "default": "root"
-                }
-            }
-        },
-        "cluster.clusterParam": {
-            "type": "object",
-            "required": [
-                "controlPlaneEndpoint",
-                "master",
-                "name"
-            ],
-            "properties": {
-                "controlPlaneEndpoint": {
-                    "type": "string"
-                },
-                "master": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/cluster.Host"
-                    }
-                },
-                "name": {
-                    "type": "string",
-                    "default": "test"
-                },
-                "networkPlug": {
-                    "type": "string",
-                    "default": "cilium"
-                },
-                "podCidr": {
-                    "type": "string",
-                    "default": "10.244.0.0/16"
-                },
-                "registry": {
-                    "description": "registry.aliyuncs.com/google_containers， k8s.gcr.io",
-                    "type": "string",
-                    "default": "registry.aliyuncs.com/google_containers"
-                },
-                "serviceCidr": {
-                    "type": "string",
-                    "default": "10.96.0.0/16"
-                },
-                "version": {
-                    "type": "string",
-                    "default": "1.22.15"
-                },
-                "workNodes": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/cluster.Host"
-                    }
-                }
-            }
-        },
         "kubernetes.JoinNodes": {
             "type": "object",
             "properties": {
@@ -248,15 +179,6 @@
                 "master": {
                     "type": "object",
                     "$ref": "#/definitions/models.Host"
-                },
-                "skip": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "type": "boolean"
-                    }
-                },
-                "version": {
-                    "type": "string"
                 },
                 "workNodes": {
                     "type": "array",
@@ -280,6 +202,58 @@
                 },
                 "version": {
                     "type": "string"
+                }
+            }
+        },
+        "models.Cluster": {
+            "type": "object",
+            "required": [
+                "controlPlaneEndpoint",
+                "master",
+                "name"
+            ],
+            "properties": {
+                "controlPlaneEndpoint": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "master": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Host"
+                    }
+                },
+                "name": {
+                    "type": "string",
+                    "default": "test"
+                },
+                "networkPlug": {
+                    "type": "string",
+                    "default": "cilium"
+                },
+                "podCidr": {
+                    "type": "string",
+                    "default": "10.244.0.0/16"
+                },
+                "registry": {
+                    "type": "string",
+                    "default": "registry.aliyuncs.com/google_containers"
+                },
+                "serviceCidr": {
+                    "type": "string",
+                    "default": "10.96.0.0/16"
+                },
+                "version": {
+                    "type": "string",
+                    "default": "1.22.15"
+                },
+                "workNodes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Host"
+                    }
                 }
             }
         },
